# prompt-lab

./: .env.example  .gitignore  ENDTOEND.md  README.md  demo-dataset.csv  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: b9d284fa4932_create_eval_engine_tables.py  e805c2293a8a_create_users_table.py  e82228d56377_create_ab_tests_table.py  f9827c9a8900_create_prompt_registry_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/api/v1/: __init__.py  ab_tests.py  analytics.py  auth.py  datasets.py  eval_runs.py  models.py  prompts.py
backend/app/core/: security.py
backend/app/models/: __init__.py  ab_test.py  dataset.py  eval.py  model.py  prompt.py  user.py
backend/app/schemas/: ab_test.py  eval.py  prompt.py
backend/app/services/: ab_test_service.py  dataset_service.py  eval_service.py  file_parser.py  model_service.py  prompt_service.py  synthetic_service.py
backend/app/tasks/: ab_test_tasks.py  celery_app.py  eval_tasks.py
backend/tests/: test_greenlet_standalone.py  test_missing_greenlet_fix.py  test_pure_functions.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: auth-sync.tsx  diff-viewer.tsx  prompt-form.tsx  shell.tsx
frontend/src/hooks/: useApiAuth.ts
frontend/src/pages/: home.tsx  sign-in.tsx  sign-up.tsx
scripts/: README.md  download_crag.py
(+20 files in other folders)
